# OpenGL-VSCode-Template

./: .clang-format  CMakeLists.txt  README.md
include/: shader.h
include/glad/: glad.h
lib/: glad.lib
src/: CMakeLists.txt
src/01_window/: main.cpp  shader.fs  shader.h  shader.vs
src/02_transform/: CMakeLists.txt  camera.hpp  main.cpp  shader.fs  shader.h  shader.vs
src/03_lighting/: camera.hpp  main.cpp  shader.fs  shader.vs
